Bug 476756 - Location bar uses wrong colors
Summary: Location bar uses wrong colors
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: application (other bugs)
Version First Reported In: Git
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-11-09 14:41 UTC by uvos
Modified: 2023-11-12 10:48 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
image of location bar with theme that has low contrast between QPalette::Text and QPalette::Window (60.83 KB, image/png)
2023-11-09 14:41 UTC, uvos
Details

Note You need to log in before you can comment on or make changes to this bug.
Description uvos 2023-11-09 14:41:17 UTC
Created attachment 162974 [details]
image of location bar with theme that has low contrast between QPalette::Text and QPalette::Window

The location bar in kate uses the QPalette::Text color ontop of QPalette::Window. This is incorrect, QPalette::WindowText should be used on QPalette::Window. This causes issues with themes where QPalette::Text has low contrast with QPalette::Window see attached image.
Comment 1 Bug Janitor Service 2023-11-11 19:04:58 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/kate/-/merge_requests/1342
Comment 2 Christoph Cullmann 2023-11-12 10:48:42 UTC
Git commit 54cadc29023ebe2d5c29cbbad67f2374ddffd66e by Christoph Cullmann.
Committed on 12/11/2023 at 11:20.
Pushed by cullmann into branch 'master'.

use window text palette color

for the highlighted element we use this, too

M  +1    -1    apps/lib/kateurlbar.cpp

https://invent.kde.org/utilities/kate/-/commit/54cadc29023ebe2d5c29cbbad67f2374ddffd66e