use window text palette color

for the highlighted element we use this, too

BUG: 476756